# GSMaiMai

./: .gitignore  CMakeLists.txt  build_windows.bat  install_windows.bat  uninstall_windows.bat
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
installer/: README.txt  install.command  uninstall.command
